--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -3,7 +3,7 @@ name: Prepared project to Compilation Android
 on:
   workflow_dispatch:
 concurrency:
-  group: ${{ github_event }}.${{ hashFiles('./app/build.gradle') }}
+  group: ${{ github.event }}.${{ hashFiles('./app/build.gradle') }}
   cancel-in-progress: true
 
 jobs:
