--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -65,7 +65,13 @@ jobs:
 
       - name: build and scan
         run: ./gradlew build --scan --warning-mode all
-      
+
+      - name: Upload builds reports 
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: build-reports
+          path: '**/build/reports/'
 
       
       - name: Check files in main Folder
