--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           repository: ${{ github.actor }}/japl-android-about-module
           path: ./japl-android-about-module
+          ref: TorresSanSebastian
 
       - name: Get japl-android-schedule-module
         uses: actions/checkout@v4
