--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -83,6 +83,13 @@ jobs:
           name: build-reports
           path: '**/build/reports/'
 
+      - name: Upload builds reports 
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: build-reports
+          path: '**/_temp/.gradle-actions/build-results/'
+
       
       - name: Check files in main Folder
         if: always()
