--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -83,7 +83,7 @@ jobs:
           name: build-reports
           path: '**/build/reports/'
 
-      - name: Upload builds reports 
+      - name: Upload builds reports build actions 
         uses: actions/upload-artifact@v4
         if: always()
         with:
