--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -74,7 +74,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: build and scan
-        run: ./gradlew build --scan --warning-mode all
+        run: ./gradlew build --scan --warning-mode all --stacktrace
 
       - name: Upload builds reports 
         uses: actions/upload-artifact@v4
