--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -17,9 +17,6 @@ jobs:
       - name: Get Code from repository
         uses: actions/checkout@v4
 
-      - name: Check files in main Folder
-        run: ls -hl
-
       - name: Remove android about module old folder link
         run: |
               rm -rf japl-android-about-module
@@ -67,7 +64,12 @@ jobs:
           token: ${{ secrets.GH_PROPERTIES_CONNECT }}
       
       - name: Copy Values on project
-        run: cp ./japl-properties/torressansebastian/google_services.json ./app/src
+        run: cp ./japl-properties/torressansebastian/google_services.json ./app/src/
+
+      - name: Check files in main Folder
+        run: |
+              ls -hl
+              ls -hl ./app/src
 
       - name: Duplication Folder on upper case UI
         run: ln -s ./ui ./UI
