--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -133,4 +133,18 @@ jobs:
           name: release-bundle
           path: './app/build/'
 
+  test-task:
+   runs-on: ubuntu-latest
+   steps:
+     
+     - uses: ./.github/actions/action
 
+     - name: test execute
+       run: ./gradlew lingtDebug
+
+     - name: Upload builds reports 
+       uses: actions/upload-artifact@v4
+       if: always()
+       with:
+          name: build-reports
+          path: '**/build/reports/'
