--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -136,6 +136,8 @@ jobs:
   test-task:
    runs-on: ubuntu-latest
    steps:
+
+     - uses: actions/checkout@v4
      
      - uses: ./.github/actions/action
 
